--- a/map.css
+++ b/map.css
@@ -23,9 +23,19 @@ body {
   height: 100%;
   pointer-events: auto;
 }
+
 svg circle {
-  fill: steelblue;
+  --color-departures: rgb(7, 139, 247);
+  --color-arrivals: darkorange;
+  --color: color-mix(
+    in oklch,
+    var(--color-departures) calc(100% * var(--departure-ratio)),
+    var(--color-arrivals)
+  );
+  fill: var(--color);
   fill-opacity: 0.6;
   stroke: white;
   stroke-width: 1;
 }
+
+
